Fix some format

--- a/_posts/2023-11-14-Datathon.md
+++ b/_posts/2023-11-14-Datathon.md
@@ -26,7 +26,7 @@ Students of all levels of Data Science knowledge are encouraged to participate. 
 
 ## Schedule (Draft)
 
-|                |                                                  |
+| March 9, 2024  |                                                  |
 | -------------- | ------------------------------------------------ |
 | 7:00 am        | Checkin, Breakfast (?)                           |
 | 7:15 am        | Activity 1 (passtime)                            |
@@ -42,7 +42,10 @@ Students of all levels of Data Science knowledge are encouraged to participate. 
 | 8:30 pm        | Workshop 4 -                                     |
 | 10:00 pm       | Activity 4, late-night snack                     |
 | 12:00 am       | Activity 5                                       |
+
+
 | March 10, 2024 |                                                  |
+| -------------- | ------------------------------------------------ |
 | 7:00 am        | Breakfast                                        |
 | 8:30 am        | Workshop 5 -                                     |
 | 12:00 pm       | Submissions!                                     |
